fix for background flicker on mobile devices

--- a/style.css
+++ b/style.css
@@ -25,29 +25,28 @@
   animation-fill-mode: forwards;
 }
 
-body::before {
+/* body::before {
   content: "";
   display: block;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -10;
-  background-image: url(./images/bg1.jpg);
+  z-index: -10; 
+  background-image: url(./images/bg1.jpg); 
+  background-color: black; 
+  overflow-x: hidden;
+} */
+
+body {
+  background: #000000 url(./images/bg1.jpg);
   background-attachment: fixed;
   background-position: 0px -51vh;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; 
-  background-color: black;
   background-repeat: no-repeat;
   overflow-x: hidden;
-}
-
-body {
-  background: #000000 url(./images/bg1.jpg);
 }
 
 .center {
@@ -228,11 +227,12 @@ a:hover::after {
   body{
     padding-top: 1px;
     margin-top: 2px; 
+    background-position: 0px -40vh;
+    background-attachment: initial;
   }
 
-  body::before {
-    background-position: 0px -40vh;
-  }
+  /* body::before {
+  } */
 
   html {
     width: 100%;
